--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "uuid": "^9.0.0",
     "wechaty": "^1.20.2",
     "wechaty-puppet-wechat": "^1.18.4",
-    "yaml": "^2.1.3"
+    "yaml": "^2.1.3",
+    "internet-available": "^1.0.0"
   },
   "devDependencies": {
     "@types/async-retry": "^1.4.5",
